# jukebox

./: .env.example  Dockerfile  TODO.md  get_token.py  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/brainstorms/: album-artist-hero-slider-requirements.md
scripts/pi-sleep/: README.md  watcher.py
static/: app.js  index.html  style.css
tests/: test_server.py
