[project]
name = "jukebox"
version = "0.1.0"
description = "Lightweight jukebox controller for Music Assistant"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "music-assistant-client>=1.0,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-aiohttp>=1.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
jukebox = "server:main"
